--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.projectclean.lwepubreader"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -24,5 +24,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.android.support:support-v4:21.0.3'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.github.satyan:sugar:1.4'
+    compile 'com.android.support:design:22.2.0'
     compile files('libs/commons-io-2.4.jar')
 }
