Translation system added. Now, if you long-press a word, and then you press the button "Translate", a new activity is launched, providing the desired translation (from English to Spanish by now).

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.projectclean.lwepubreader">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -28,6 +29,13 @@
             android:configChanges="keyboardHidden|screenSize"
             android:label="@string/title_activity_epub"
             android:theme="@style/FullscreenTheme"></activity>
+
+        <activity
+            android:name=".activities.TranslationActivity"
+            android:configChanges="keyboardHidden|screenSize"
+            android:label="@string/title_activity_epub"
+            android:theme="@style/FullscreenTheme"></activity>
+
     </application>
 
 </manifest>
