--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,7 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.github.satyan:sugar:1.4'
     compile 'com.android.support:design:22.2.0'
+    compile 'com.squareup.okhttp3:okhttp:3.0.0'
     compile files('libs/commons-io-2.4.jar')
+    compile files('libs/jsoup-1.8.3.jar')
 }
