#Issue 18 (sepia, night and normal mode), #Issue 13 (loading screen when adding new books), #Issue 9 (Ads engine added), #Issue 8 (Book details preview screen added). Code and files clean up!.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -28,6 +29,18 @@ dependencies {
     compile 'com.github.satyan:sugar:1.4'
     compile 'com.android.support:design:22.2.0'
     compile 'com.squareup.okhttp3:okhttp:3.0.0'
-    compile files('libs/commons-io-2.4.jar')
+    compile 'com.google.android.gms:play-services-ads:7.5.0'
+    compile files('libs/appodeal-1.14.6.jar')
     compile files('libs/jsoup-1.8.3.jar')
+    compile files('libs/applovin-6.1.5.jar')
+    compile files('libs/chartboost-6.2.0.jar')
+    compile files('libs/commons-io-2.4.jar')
+    compile files('libs/flurry-analytics-6.2.0.jar')
+    compile files('libs/inmobi-5.2.0.jar')
+    compile files('libs/pwepubparselib.jar')
+    compile files('libs/my-targe-4.2.0.jar')
+    compile files('libs/pwepubparselib.jar')
+    compile files('libs/yandex-metrica-2.30.jar')
+    compile files('libs/unity-ads-1.4.7.jar')
+
 }
