--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,13 +19,23 @@
         <meta-data android:name="VERSION" android:value="1" />
         <meta-data android:name="DOMAIN_PACKAGE_NAME" android:value="com.projectclean.lwepubreader.model" />
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:configChanges="keyboardHidden|screenSize|orientation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".activities.BookDetailsActivity"
+            android:configChanges="keyboardHidden|screenSize">
+        </activity>
+
+        <activity android:name=".activities.ConfigurationActivity"
+            android:configChanges="keyboardHidden|screenSize">
+        </activity>
+
         <activity
             android:name=".activities.EPUBActivity"
             android:configChanges="keyboardHidden|screenSize|orientation"
@@ -38,7 +48,24 @@
             android:label="@string/title_activity_epub"
             android:theme="@style/FullscreenTheme"></activity>
 
-        <meta-data android:name="com.appodeal.framework" android:value="android" />
+        <activity
+            android:name="com.dropbox.core.android.AuthActivity"
+            android:configChanges="orientation|keyboard"
+            android:launchMode="singleTask" >
+            <intent-filter>
+                <!-- Change this to be db- followed by your app key -->
+                <data android:scheme="db-ss3w7508nyebr8i" />
+
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.BROWSABLE" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <service android:name="com.projectclean.lwepubreader.services.DropboxDownloadService" />
+
+        <!--<meta-data android:name="com.appodeal.framework" android:value="android" />
         <receiver android:name="com.appodeal.ads.AppodealPackageAddedReceiver" android:exported="true" android:enabled="true">
             <intent-filter>
                 <action android:name="android.intent.action.PACKAGE_ADDED" />
@@ -97,7 +124,6 @@
 
         <activity android:name="com.appodeal.ads.networks.SpotXActivity"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen"/>
-        <!--suppress AndroidDomInspection -->
         <activity android:name="com.facebook.ads.InterstitialActivity" android:configChanges="keyboardHidden|orientation|screenSize" />
 
         <activity android:name="com.unity3d.ads.android.view.UnityAdsFullscreenActivity"
@@ -123,11 +149,9 @@
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen"/>
         <activity android:name="com.startapp.android.publish.list3d.List3DActivity"
             android:theme="@android:style/Theme" />
-        <!--suppress AndroidDomInspection -->
         <activity android:name="com.startapp.android.publish.OverlayActivity"
             android:theme="@android:style/Theme.Translucent"
             android:configChanges="orientation|keyboardHidden|screenSize" />
-        <!--suppress AndroidDomInspection -->
         <activity android:name="com.startapp.android.publish.FullScreenActivity"
             android:theme="@android:style/Theme"
             android:configChanges="orientation|keyboardHidden|screenSize" />
@@ -146,7 +170,6 @@
                 <action android:name="com.android.vending.INSTALL_REFERRER" />
             </intent-filter>
         </receiver>
-        <!--suppress AndroidDomInspection -->
         <activity android:name="com.yandex.mobile.ads.AdActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
         <activity android:name="com.inmobi.rendering.InMobiAdActivity"
@@ -160,9 +183,8 @@
         </receiver>
         <service android:enabled="true" android:name="com.inmobi.signals.activityrecognition.ActivityRecognitionManager" />
 
-        <!--suppress AndroidDomInspection -->
         <activity android:name="com.flurry.android.FlurryFullscreenTakeoverActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />-->
 
     </application>
 
