--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,15 +5,16 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/swift_reader_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:hardwareAccelerated="true"
         android:theme="@style/AppTheme"
-        android:name="com.orm.SugarApp">
+        android:name="android.support.multidex.MultiDexApplication">
 
         <meta-data android:name="DATABASE" android:value="lwepub.db" />
         <meta-data android:name="VERSION" android:value="1" />
@@ -34,6 +35,11 @@
 
         <activity android:name=".activities.ConfigurationActivity"
             android:configChanges="keyboardHidden|screenSize">
+        </activity>
+
+        <activity
+            android:name=".activities.AboutUsActivity"
+            android:configChanges="keyboardHidden|screenSize" >
         </activity>
 
         <activity
@@ -65,7 +71,8 @@
 
         <service android:name="com.projectclean.lwepubreader.services.DropboxDownloadService" />
 
-        <!--<meta-data android:name="com.appodeal.framework" android:value="android" />
+
+        <meta-data android:name="com.appodeal.framework" android:value="android" />
         <receiver android:name="com.appodeal.ads.AppodealPackageAddedReceiver" android:exported="true" android:enabled="true">
             <intent-filter>
                 <action android:name="android.intent.action.PACKAGE_ADDED" />
@@ -124,7 +131,7 @@
 
         <activity android:name="com.appodeal.ads.networks.SpotXActivity"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen"/>
-        <activity android:name="com.facebook.ads.InterstitialActivity" android:configChanges="keyboardHidden|orientation|screenSize" />
+        <activity android:name="com.facebook.ads.InterstitialAdActivity" android:configChanges="keyboardHidden|orientation|screenSize" />
 
         <activity android:name="com.unity3d.ads.android.view.UnityAdsFullscreenActivity"
             android:configChanges="fontScale|keyboard|keyboardHidden|locale|mnc|mcc|navigation|orientation|screenLayout|screenSize|smallestScreenSize|uiMode|touchscreen"
@@ -184,7 +191,7 @@
         <service android:enabled="true" android:name="com.inmobi.signals.activityrecognition.ActivityRecognitionManager" />
 
         <activity android:name="com.flurry.android.FlurryFullscreenTakeoverActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />-->
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
 
     </application>
 
