--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,10 +6,10 @@ android {
 
     defaultConfig {
         applicationId "com.projectclean.lwepubreader"
-        minSdkVersion 16
+        minSdkVersion 19
         targetSdkVersion 21
-        versionCode 1
-        versionName "1.0"
+        versionCode 4
+        versionName "1.02"
         multiDexEnabled true
     }
     buildTypes {
@@ -18,39 +18,21 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    repositories {
-        maven {
-            url 'https://download.01.org/crosswalk/releases/crosswalk/android/maven2'
-        }
+    dexOptions {
+        javaMaxHeapSize "4g" //specify the heap size for the dex process
     }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    //compile 'org.xwalk:xwalk_core_library:17.46.448.10'
     compile 'com.android.support:multidex:1.0.0'
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.android.support:support-v4:21.0.3'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.github.satyan:sugar:1.4'
     compile 'com.android.support:design:22.2.0'
-    //compile 'com.squareup.okhttp3:okhttp:3.1.2'
     compile 'com.squareup.okhttp:okhttp:2.7.4'
-    compile 'com.squareup:otto:1.3.8'
+    compile 'com.google.guava:guava:19.0'
     compile 'com.google.android.gms:play-services-ads:7.5.0'
-    compile files('libs/jsoup-1.8.3.jar')
-    compile files('libs/appodeal-1.14.8.jar')
-    compile files('libs/applovin-6.1.5.jar')
-    compile files('libs/chartboost-6.2.0.jar')
-    compile files('libs/commons-io-2.4.jar')
-    compile files('libs/flurry-analytics-6.2.0.jar')
-    compile files('libs/inmobi-5.2.1.jar')
-    compile files('libs/pwepubparselib.jar')
-    compile files('libs/my-targe-4.2.0.jar')
-    compile files('libs/pwepubparselib.jar')
-    compile files('libs/yandex-metrica-2.30.jar')
-    compile files('libs/unity-ads-1.4.7.jar')
-    compile files('libs/dropbox-core-nodep.jar')
-    //compile files('libs/jackson-core-2.6.1.jar')
 }
